fix(grid): columns misalignment when Bootstrap is used.
Closes telerik/kendo-theme-default#285

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -69,6 +69,10 @@
             text-decoration: none;
         }
 
+        table,
+        .k-grid-header-wrap {
+            box-sizing: content-box;
+        }
 
         // Grouping and hierarcy
         .k-group-col,
